Dropdown selector fixes: make dropdown menu max heigh smaller, to avoid overflow and fix bug with clicking out not hiding menu

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,7 +50,7 @@ h4 {
     z-index: 1;
     background: $mainControlsBackground;
     color: #fff;
-    width: 400px;
+    width: 350px;
     border-radius: 1em;
     touch-action: none; // Disable pinch to zoom on iOS devices
     overflow: auto;
